--- a/src/app/components/main/canvas/canvas.component.html
+++ b/src/app/components/main/canvas/canvas.component.html
@@ -685,7 +685,9 @@
                                     funcName,
                                     isEvt,
                                     index,
-                                    evtIndex
+                                    evtIndex,
+                                    cascade,
+                                    branch
                                 )
                             "
                         >
