sync: Added signup page; Updated dependencies

--- a/src/app/components/main/canvas/canvas.component.html
+++ b/src/app/components/main/canvas/canvas.component.html
@@ -1089,7 +1089,8 @@
                                     funcName,
                                     isEvt,
                                     index,
-                                    evtIndex
+                                    evtIndex,
+                                    cascade
                                 )
                             "
                         >
